crates/graphite/tests/ui/flow_duplicate_binding.stderr
error: ТЮЪуИЏтљЇ `doubled` сЂ»ТЌбсЂФт«БУеђсЂЋсѓїсЂдсЂёсЂЙсЂЎ
  --> tests/ui/flow_duplicate_binding.rs:17:23
   |
17 |         2 -[negate]-> doubled,
   |                       ^^^^^^^

error: ТюђтѕЮсЂ«т«БУеђсЂ»сЂЊсЂАсѓЅ
  --> tests/ui/flow_duplicate_binding.rs:16:23
   |
16 |         1 -[double]-> doubled,
   |                       ^^^^^^^
